--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
